# ffmpeg

./: CMakeLists.txt  configure
libavformat/: os_support.c
